logic change and impersonation

--- a/CatchMe/Views/Admin/Home.cshtml
+++ b/CatchMe/Views/Admin/Home.cshtml
@@ -29,5 +29,10 @@
 </a>*@
 <hr />
 <a href="@Url.Action("ListDeleted")" class="nodeco">
-<h3><span class="fa fa-recycle text-danger"></span>&nbsp; Recovery<small class="text-muted"> - Reviewing deleted items and recovering items</small></h3>
-    </a>
+    <h3><span class="fa fa-recycle text-danger"></span>&nbsp; Recovery<small class="text-muted"> - Reviewing deleted items and recovering items</small></h3>
+</a>
+
+<hr />
+<a href="@Url.Action("Impersonation")" class="nodeco">
+    <h3><span class="fa fa-user-secret text-danger"></span>&nbsp; Impersonate<small class="text-muted"> - impersonate a user for debugging purposes</small></h3>
+</a>
