--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -9,7 +9,8 @@
     ViewBag.Title = "Catch Me";
 
     var countopen = Model.Where(x => x.status != 9).Count();
-    var countme = Model.Where(x => x.assigned_to == session.Current.UserId && x.status != 9).Count();
+    //var countme = Model.Where(x => x.assigned_to == session.Current.UserId && x.status != 9).Count();
+    var countme = Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 8 || x.status == 3)).Count();
     var countclosed = Model.Where(x => x.status == 9).Count();
     var countopenbyme = Model.Where(x => x.owner == session.Current.UserId && x.status != 9).Count();
     var countsearched= Model.Where(x => x.IsFilteredOn).Count();
@@ -27,9 +28,9 @@
 <div>
     <div class="pull-left"><h2>@session.Current.CurrentProject</h2></div>
     <div class="pull-right" style="margin-top:20px;">
-        <span class="text-muted">change project:&nbsp;&nbsp;</span>
         @if (session.Current.MyProjects != null && session.Current.MyProjects.Count() > 1)
         {
+        <span class="text-muted">change project:&nbsp;&nbsp;</span>
             @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "projectselect pull-right changeproject" })
         }
     </div>
@@ -120,7 +121,7 @@
                 </thead>
 
                 <tbody>
-                    @foreach (var item in Model.Where(x => x.assigned_to == session.Current.UserId &&  ( x.status != 9 ) || x.owner == session.Current.UserId && ( x.status == 7 || x.status == 8 || x.status == 3) ))
+                    @foreach (var item in Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 8 || x.status == 3)))
                     {
                         <tr>
                             <td>
