seearching titles also

--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -52,11 +52,11 @@
 
 <div class="gap"></div>
 
-@*<a href="#" class="shownextsection">Advanced Search</a>
+<a href="#" class="shownextsection">Advanced Search</a>
 
 <section style="display:none">
     @Html.Partial("_searchFilter", searchFilter)
-</section>*@
+</section>
     
 
 <div>
@@ -81,7 +81,7 @@
         {
             <li role="presentation" class="recentcolor"><a href="#recent" aria-controls="recent" role="tab" data-toggle="tab">Recent updates (@latest10.Count())</a></li>
         }
-       @*<li role="presentation"><a href="#searched" aria-controls="messages" role="tab" data-toggle="tab">Searched (@countsearched)</a></li>*@
+       <li role="presentation"><a href="#searched" aria-controls="messages" role="tab" data-toggle="tab">Searched (@countsearched)</a></li>
         
     </ul>
 
