--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -21,6 +21,31 @@ body {
     color:red;
 }
 
+
+.circle {
+	width: 10px;
+	height: 10px;
+	background: red;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.bg-red {
+    background:red;
+}
+
+.bg-green {
+    background:blue;
+}
+
+.bg-green {
+    background:green;
+}
+
+
+
+
 .text-light {
     color:#CCC;
 }
