added user project role and stats per user plus smarties on priority

--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -257,6 +257,11 @@ width:100px;
   }
 
 
+  .color-low { color: #5BC0DE;}
+  .color-medium { color: #ffd800;}
+  .color-high { color: #D9534F;}
+  .color-immediate {color: #b200ff;}
+
 /* overriding chosen */
 
 .chosen-container-single .chosen-single {
