--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -139,7 +139,7 @@ table.fixed td { overflow: hidden; }
                                 @assignee
                             </td>
                             <td>
-                                <span class="circle bg-danger"></span> @Html.DisplayFor(modelItem => item.PriorityDesc)
+                                <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
                             </td>
                             <td class="@(item.IsOverdue?"red":"")">
 
@@ -215,7 +215,7 @@ table.fixed td { overflow: hidden; }
                                 @assignee
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.PriorityDesc)
+                                <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
                             </td>
                             <td class="@(item.IsOverdue?"red":"")">
                                 @Html.DisplayFor(modelItem => item.due_date)
@@ -252,6 +252,7 @@ table.fixed td { overflow: hidden; }
                         <td width="45%">
                             Title
                         </td>
+                        <td>
                         <th>Opened</th>
                         <th width="20%">
                             Assigned
@@ -283,6 +284,8 @@ table.fixed td { overflow: hidden; }
                                 </div>
 
                             </td>
+                            <td><span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp;</td>
+                            
                             <td>@item.user1.firstname</td>
                             <td>
                                 @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
@@ -363,7 +366,7 @@ table.fixed td { overflow: hidden; }
                                 @assignee
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.PriorityDesc)
+                                <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
                             </td>
                             <td class="@(item.IsOverdue?"red":"")">
                                 @Html.DisplayFor(modelItem => item.due_date)
@@ -446,7 +449,7 @@ table.fixed td { overflow: hidden; }
                             </td>
                             <td>@item.user2.firstname</td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.PriorityDesc)
+                                <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
                             </td>
                             <td>@Html.Raw(item.LastUpdatedSince)</td>
                             <td class="@(item.IsOverdue?"red":"")">
