--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -257,6 +257,7 @@ width:100px;
   }
 
 
+  .color-now { color: #5CB85C;}
   .color-low { color: #5BC0DE;}
   .color-medium { color: #ffd800;}
   .color-high { color: #D9534F;}
