--- a/CatchMe/Views/Admin/Home.cshtml
+++ b/CatchMe/Views/Admin/Home.cshtml
@@ -36,3 +36,8 @@
 <a href="@Url.Action("Impersonation")" class="nodeco">
     <h3><span class="fa fa-user-secret text-danger"></span>&nbsp; Impersonate<small class="text-muted"> - impersonate a user for debugging purposes</small></h3>
 </a>
+
+<hr />
+<a href="@Url.Action("Visits")" class="nodeco">
+    <h3><span class="fa fa-history text-danger"></span>&nbsp; Time Visit<small class="text-muted"> - Who is online</small></h3>
+</a>
