--- a/CatchMe/Views/Stats/Index.cshtml
+++ b/CatchMe/Views/Stats/Index.cshtml
@@ -16,7 +16,7 @@
     var s3 = Model.Where(x => x.status_code == 3).Count();
     var s4 = Model.Where(x => x.status_code == 4).Count();
     var s5 = Model.Where(x => x.status_code == 5).Count();
-    //var s6 = Model.Where(x => x.status_code == 6).Count();
+    var s6 = Model.Where(x => x.status_code == 6).Count();
     var s7 = Model.Where(x => x.status_code == 7).Count();
     var s8 = Model.Where(x => x.status_code == 8).Count();
     var s9 = Model.Where(x => x.status_code == 9).Count();
@@ -32,7 +32,7 @@
     var figures = ViewBag.Figures as CatchMe.Models.viewFigures;
 
     var lastbacklogdate = backlogs.Last().fulldate;
-    var openTasks = ViewBag.OpenTasks as List<CatchMe.Models.task>;
+    var openTasks = ViewBag.OpenTasks as List<CatchMe.Models.viewStatus>;
 
 }
 
@@ -60,7 +60,7 @@
 @if (session.Current.IsProjectLead || session.Current.IsAdmin)
 {
     <div class="row">
-        <h3>By Person (open)</h3>
+        <h3>By Person</h3>
         <div class="col-md-12">
             <table class="table table-striped">
                 <thead>
@@ -72,48 +72,55 @@
                         <th class="text-center" title="Completed"><span class="fa fa-check-circle"></span>&nbsp;Compld</th>
                         <th class="text-center"><span class="fa fa-pause"></span>&nbsp;On Hold</th>
                         <th class="text-center" title="problem"><span class="fa fa-bomb"></span>&nbsp;Prob</th>
+                        <th class="text-center" title="no Issue"><span class="fa fa-smile-o"></span>&nbsp;No Issue</th>
                         <th class="text-center"><span class="fa fa-trophy"></span>&nbsp;Passed</th>
                         <th class="text-center"><span class="fa fa-warning"></span>&nbsp;Failed</th>
-                        <th class="text-center">Total</th>
+                        <th class="text-center">Total Open</th>
+                        <th class="text-center">Closed</th>
 
                     </tr>
                 </thead>
                 <tbody>
                     @{var prevuser = -1; }
-                    @foreach (var task in openTasks.OrderBy(x => x.user.user_id))
+                    @foreach (var task in openTasks.OrderBy(x => x.user_id))
                     {
-                        if (task.user.user_id != prevuser)
+                        if (task.user_id != prevuser)
                         {
                             <tr>
-                                <th>@task.user.firstname</th>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 0)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 1)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 2)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 3)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 4)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 5)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 7)</td>
-                                <td class="text-center">@openTasks.Count(x => x.user == task.user & x.status == 8)</td>
-                                <th class="text-center">@openTasks.Count(x => x.user == task.user & x.status < 9)</th>
+                                <th>@task.firstname</th>
+                                <td class="text-center">@task.newtask</td>
+                                <td class="text-center">@task.action</td>
+                                <td class="text-center">@task.investigation</td>
+                                <td class="text-center">@task.completed</td>
+                                <td class="text-center">@task.onhold</td>
+                                <td class="text-center">@task.problem</td>
+                                <td class="text-center">@task.no_issue</td>  
+                                <td class="text-center">@task.passed</td>
+                                <td class="text-center">@task.failed</td>
+                                <th class="text-center">@task.total_open</th>
+                                <th class="text-center">@task.closed</th>
+                                
 
                             </tr>
                         }
 
-                        prevuser = task.user.user_id;
+                        prevuser = task.user_id;
                     }
                 </tbody>
                 <tfoot>
                     <tr>
                         <td></td>
-                        <th class="text-center">@openTasks.Count(x => x.status == 0)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 1)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 2)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 3)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 4)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 5)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 7)</th>
-                        <th class="text-center">@openTasks.Count(x => x.status == 8)</th>
-                        <th class="text-center"><span style="font-size:1.2em"> @openTasks.Count(x => x.status < 9)</span></th>
+                        <th class="text-center">@openTasks.Sum(x => x.newtask)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.action)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.investigation)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.completed)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.onhold)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.problem)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.no_issue)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.passed)</th>
+                        <th class="text-center">@openTasks.Sum(x => x.failed)</th>
+                        <th class="text-center"><span style="font-size:1.2em"> @openTasks.Sum(x => x.total_open)</span></th>
+                        <th class="text-center"><span style="font-size:1.2em"> @openTasks.Sum(x => x.closed)</span></th>
 
                     </tr>
                 </tfoot>
@@ -189,7 +196,7 @@
               "Complete",
               "Hold",
               "Problem",
-              //"No Issue",
+              "No Issue",
               "Passed",
               "Failed",
               "Closed"
@@ -197,7 +204,7 @@
                 ], datasets: [{
                     label: '# status',
                     legend: false,
-                    data: [@s0,@s1,@s2,@s3,@s4,@s5,@s7,@s8,@s9],
+                    data: [@s0,@s1,@s2,@s3,@s4,@s5,@s6,@s7,@s8,@s9],
                     backgroundColor: [
                         'rgba(51,122,183, 0.6)',
                         'rgba(240,173,78, 0.6)',
@@ -205,7 +212,7 @@
                         'rgba(91,192,222, 0.6)',
                         'rgba(119,119,119,0.6)',
                         'rgba(217,83,79,  0.6)',
-                        //'rgba(119,119,119,0.6)',
+                        'rgba(119,119,119,0.6)',
                         'rgba(92,184,92,  0.6)',
                         'rgba(217,83,79,  0.6)',
                         'rgba(119,119,119,0.6)'
@@ -217,7 +224,7 @@
                         'rgba(91,192,222, 1)',
                         'rgba(119,119,119,1)',
                         'rgba(217,83,79,  1)',
-                        //'rgba(119,119,119,1)',
+                        'rgba(119,119,119,1)',
                         'rgba(92,184,92,  1)',
                         'rgba(217,83,79,  1)',
                         'rgba(119,119,119,1)'
