--- a/CatchMe/Views/Admin/Home.cshtml
+++ b/CatchMe/Views/Admin/Home.cshtml
@@ -34,10 +34,10 @@
 
 <hr />
 <a href="@Url.Action("Impersonation")" class="nodeco">
-    <h3><span class="fa fa-user-secret text-danger"></span>&nbsp; Impersonate<small class="text-muted"> - impersonate a user for debugging purposes</small></h3>
+    <h3><span class="fa fa-user-secret text-warning"></span>&nbsp; Impersonate<small class="text-muted"> - impersonate a user for debugging purposes</small></h3>
 </a>
 
 <hr />
 <a href="@Url.Action("Visits")" class="nodeco">
-    <h3><span class="fa fa-history text-danger"></span>&nbsp; Time Visit<small class="text-muted"> - Who is online</small></h3>
+    <h3><span class="fa fa-history text-success"></span>&nbsp; Time Visit<small class="text-muted"> - Who is online</small></h3>
 </a>
