--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -21,7 +21,11 @@
     if (searchFilter  == null)
     {
         searchFilter = new CatchMe.Models.ViewModel.SearchFilter();
-    }    
+    }
+
+    var countnotifications = Model.Where(x => x.isInNotificationList).Count();
+    
+    
 }
 
 
@@ -80,6 +84,12 @@ table.fixed td { overflow: hidden; }
         {
             <li role="presentation"><a href="#searched" aria-controls="messages" role="tab" data-toggle="tab">Searched (@countsearched)</a></li>            
         }
+        @if (countnotifications > 0)
+        {
+            <li role="presentation" class="notifiedcolor"><a href="#notified" aria-controls="notified" role="tab" data-toggle="tab"> <span class="fa fa-envelope"></span> Received (@countnotifications)</a></li>
+
+        }
+
         
     </ul>
 
@@ -548,6 +558,85 @@ table.fixed td { overflow: hidden; }
                 </tbody>
             </table>
 
+        </div>
+
+
+        <div role="tabpanel" class="tab-pane" id="notified">
+            <div class="gap"></div>
+            <table class="table" id="tablenotification" style="width:100%">
+
+                <thead>
+                    <tr>
+                        <th width="5%">
+                            Id
+                        </th>
+                        <td></td>
+
+                        <td width="45%">
+                            Title
+                        </td>
+                        <td>
+                            <th width="20%">From</th>
+                        <th width="20%">
+                            Assigned
+                        </th>
+
+                        <th width="14%">
+                            Due On
+                        </th>
+
+                        <th></th>
+                        <th width="1%"></th>
+                        <td></td>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @foreach (var item in Model.Where(x => x.isInNotificationList).OrderByDescending(x => x.updated_on))
+                    {
+                        <tr>
+                            <td>
+                                <span class="text-muted fa-15x">@item.task_id</span>
+                            </td>
+                            <td>
+                                <span style="padding:7px 2px;" class="label label-@(item.StatusDescLabel)" data-toggle="tooltip" data-placement="left" title="@item.TypeDesc - @item.StatusDesc"><span style="font-size:1.5em" class="fa fa-fw fa-@(item.typeIcon)"></span></span>
+                            </td>
+
+                            <td>
+                                <div class="readmore">
+                                    <a href="@Url.Action("EditTask", new { id = item.task_id })">@Html.DisplayFor(modelItem => item.title)</a> (@item.TypeDesc)
+                                </div>
+
+                            </td>
+                            <td><span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp;</td>
+
+                            <td>
+                            @if(item.notifications.Count>0)
+                            {                                
+                                @item.notifications.OrderByDescending(x=>x.sent_on).FirstOrDefault().sender_firstname
+                            }
+                            </td>
+                            <td>
+                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
+                                @assignee
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.due_date)
+                            </td>
+                            <td>@*@Html.Raw(item.TimeTaken)*@</td>
+                            <td>
+                                @*<a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>*@
+                                @*<a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>*@
+
+                            </td>
+                            <td>
+                                <span class="fa fa-@(item.HasAttachment?"paperclip":"")"></span>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
 
         
