--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -139,7 +139,7 @@
                                     @notif.sender_name
                                 </td>
                                 <td>
-                                    @notif.recicipents
+                                    @notif.recipients
                                 </td>
                             </tr>
                             }
