--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -50,7 +50,7 @@ table.fixed td { overflow: hidden; }
 
 <div class="gap"></div>
 
-<a href="#" class="shownextsection"><small>Advanced Search</small></a>
+@*<a href="#" class="shownextsection"><small>Advanced Search</small></a>*@
 
 <section style="display:none">
     @Html.Partial("_searchFilter", searchFilter)
