fix date and added xls in list of uploads

--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -146,8 +146,9 @@
             format: 'dd/mm/yyyy',
             autoclose: true,
             clearBtn: true
+        });
 
-        })
+        jQuery.validator.methods["date"] = function (value, element) { return true; }
 
         $('.chosen-select').chosen();
 
